Con el alta creado

--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -15,7 +15,9 @@
 
             </label>
             <label class="item">
-                <button class="button button-block button-positive">
+                <button class="button button-block button-positive"
+                        ui-sref="noLogin.registro"
+                        >
                     Nueva cuenta
                 </button>
 
