--- a/www/templates/registro.html
+++ b/www/templates/registro.html
@@ -3,19 +3,28 @@
         <div class="list">
 
             <label class="item item-input">
-                <input type="text" placeholder="Nombre">
+                <input type="text" placeholder="Nombre"
+                       ng-model="usuario.nombre">
             </label>
             <label class="item item-input">
-                <input type="text" placeholder="Apellidos">
+                <input type="text" placeholder="Apellidos"
+                       ng-model="usuario.apellidos"
+                        >
             </label>
             <label class="item item-input">
-                <input type="text" placeholder="Email">
+                <input type="text" placeholder="Email"
+                       ng-model="usuario.email"
+                        >
             </label>
             <label class="item item-input">
-                <input type="password" placeholder="Password">
+                <input type="password" placeholder="Password"
+                       ng-model="usuario.password"
+                        >
             </label>
-+           <label class="item">
-                <button class="button button-block button-positive">
+           <label class="item">
+                <button class="button button-block button-positive"
+                        ng-click="registro()"
+                        >
                     Nueva cuenta
                 </button>
 
