--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -2,14 +2,17 @@
     <ion-content>
         <div class="list">
             <label class="item item-input">
-                <input type="text" placeholder="Email">
+                <input type="text" placeholder="Email"
+                       ng-model="usuario.email">
             </label>
             <label class="item item-input">
-                <input type="password" placeholder="PAssword">
+                <input type="password" placeholder="Password"
+                       ng-model="usuario.password">
             </label>
 
             <label class="item">
-                <button class="button button-block button-positive">
+                <button class="button button-block button-positive"
+                        ng-click="iniciarSesion()">
                     Inicio de sesión
                 </button>
 
