--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -13,8 +13,9 @@ navigation history that also transitions its views in and out.
 
 
   <!-- Chats Tab -->
-  <ion-tab title="Chats" icon-off="ion-ios7-chatboxes-outline" icon-on="ion-ios7-chatboxes" href="#/tab/chats">
-    <ion-nav-view name="tab-chats"></ion-nav-view>
+  <ion-tab title="Blocs" icon-off="ion-ios7-chatboxes-outline"
+           icon-on="ion-ios7-chatboxes" href="#/tab/blocs">
+    <ion-nav-view name="tab-blocs"></ion-nav-view>
   </ion-tab>
 
   <!-- Friends Tab -->
