--- a/www/templates/tab-blocs.html
+++ b/www/templates/tab-blocs.html
@@ -2,7 +2,7 @@
   <ion-content>
     <ion-list>
       <ion-item class="item-avatar" ng-repeat="item in blocs"
-                type="item-text-wrap" href="#/tab/friend/{{item.id}}">
+                type="item-text-wrap" href="#/tab/blocs/{{item.id}}">
         <img ng-src="{{item.img}}">
         <h2>{{item.nombre}}</h2>
         <h3>{{item.descripcion}}</h3>
